--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -1,3 +1,4 @@
+{% include 'breadcrumbs' %}
 <div class="page-404">
     <div class="container">
         <div class="d-flex flex-column align-items-center py-40 py-md-100 my-100">
