--- a/templates/customers/activate_account.liquid
+++ b/templates/customers/activate_account.liquid
@@ -1,3 +1,4 @@
+{% include 'breadcrumbs' %}
 <div class="activate-account pb-60">
   <div class="container">
     <h1 class="h3 mt-30 mb-40 text-center">{{ 'customer.activate_account.title' | t }}</h1>
