--- a/templates/customers/order.liquid
+++ b/templates/customers/order.liquid
@@ -1,3 +1,4 @@
+{% include 'breadcrumbs' %}
 <div class="container pb-60">
   <h1 class="h3 mt-30 mb-40 text-center">{{ 'customer.orders.title' | t }}</h1>
   <a href="/account" class="btn-link my-30">{{ 'customer.account.return' | t }}</a>
