--- a/templates/customers/reset_password.liquid
+++ b/templates/customers/reset_password.liquid
@@ -1,3 +1,4 @@
+{% include 'breadcrumbs' %}
 <div class="reset-password pb-60">
   <div class="container">
     <h1 class="h3 mt-30 mb-40 text-center">{{ 'customer.reset_password.title' | t }}</h1>
