--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,3 +1,4 @@
+{% include 'global-variables' %}
 <div class="page">
   {% include 'breadcrumbs' %}
   <div class="container {% if offset_pages_margin_top_d > 0 %} mt-lg-{{ offset_pages_margin_top_d }}{% endif %} pb-60{% if offset_pages_margin_bottom_d > 0 %} mb-lg-{{ offset_pages_margin_bottom_d }}{% endif %}">
