--- a/snippets/product-page-get-main.liquid
+++ b/snippets/product-page-get-main.liquid
@@ -12,7 +12,7 @@
                     </div>
                 {%- endif -%}
             </div>
-            <div class="col-12 col-lg-6 blancsom-image-side">
+            <div class="col-12 col-lg-6">
                 {% include 'product-page-get-info' %}
             </div>
         </div>
@@ -20,7 +20,7 @@
 {%- when '2' -%}
     <div class="product-page-main"{% include 'product-get-attributes' %} data-js-product-clone-id="footbar">
         <div class="row">
-            <div class="col-12 col-lg-6 blancsom-image-side{% if enable_sticky_gallery %} index-10 sticky-sidebar js-sticky-sidebar{% endif %}">
+            <div class="col-12 col-lg-6{% if enable_sticky_gallery %} index-10 sticky-sidebar js-sticky-sidebar{% endif %}">
                 {%- if enable_sticky_gallery -%}
                     <div data-js-sticky-sidebar-body{% if is_quick_view %} data-js-disable-offsets{% endif %}>
                 {%- endif -%}
@@ -67,7 +67,6 @@
             </div>
         </div>
     </div>
-    {% include 'blancsom-product-tab-script' %}
 {%- when '4' -%}
     <div class="product-page-main"{% include 'product-get-attributes' %} data-js-product-clone-id="footbar">
         <div class="row">
