--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -1,3 +1,4 @@
+{% include 'breadcrumbs' %}
 {%- if settings.product_format_pjpg -%}
     {%- assign image_format = 'pjpg' -%}
 {%- else -%}
@@ -84,7 +85,7 @@
                         </div>
                         {%- if settings.cart_show_free_shipping -%}
                             <div class="pt-20">
-                                {% render 'blancsom-free-shipping' %}
+                                {% render 'free-shipping' %}
                             </div>
                         {%- endif -%}
                         <div class="d-flex pt-25">
