--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -1,3 +1,4 @@
+{% include 'breadcrumbs' %}
 <div class="register pb-60">
   <div class="container">
     <h1 class="h3 mt-30 mb-40 text-center">{{ 'customer.register.title' | t }}</h1>
