--- a/sections/one-product.liquid
+++ b/sections/one-product.liquid
@@ -171,8 +171,7 @@
                     {%- endif -%}
                     {%- if show_vendor -%}
                       <div class="one-product-info__vendor{% if vendor == blank %} d-none-important{% endif %} mb-5">
-                        <p class="m-0" data-js-product-vendor>{{ 'products.product.vendor' | t }}:
-                          <span>{{ vendor }}</span></p>
+                        <p class="m-0" data-js-product-vendor><span>{{ vendor }}</span></p>
                       </div>
                     {%- endif -%}
                   </div>
@@ -190,6 +189,9 @@
                           {%- assign price_save_money = price_save | money -%}
                           {%- assign price_save_procent = price | times: 100 | divided_by: compare_at_price | minus: 100 | times: -1 -%}
                           {{ 'products.product.price_sale_details_html' | t: price: price_save_money, procent: price_save_procent }}
+                          {% unless settings.product_show_compare_at_price %}
+                          / List Price {{ compare_at_price | money  }}
+                        {% endunless %}
                         {%- endif -%}
                       </p>
                     {%- endif -%}
