--- a/sections/home-builder.liquid
+++ b/sections/home-builder.liquid
@@ -1010,6 +1010,17 @@
 "default": 0
 },
 {
+"type": "range",
+"id": "img_position",
+"min": 0,
+"max": 100,
+"step": 1,
+"unit": "%",
+"label": "Image Y Position",
+"info": "50% - middle",
+"default": 50
+},
+{
 "type": "select",
 "id": "size_of_column",
 "label": "Size of the column",
