--- a/snippets/popup-product-inquiry.liquid
+++ b/snippets/popup-product-inquiry.liquid
@@ -1,10 +1,10 @@
 <div class="popup-delivery-return position-relative py-30 px-15" data-popup-content>
     <i class="popup-delivery-return__close position-absolute cursor-pointer" data-js-popup-close>{% render 'icon-theme-164' %}</i>
-    <div class="popup-delivery-return__content mx-auto notify-me">
-        <div class="rte text-center">
-            <h4>Notify Me</h4>
-            <h6>Keep me posted</h6>
-            <p>Feel free to email us, we will notify you when the products are available. <a href="mailto:hello@blancsom.com">hello@blancsom.com</a></p>
+    <div class="popup-delivery-return__content mx-auto">
+        <div class="rte">
+            <h4><i>{% render 'icon-theme-153' %}</i> Product Inquiry</h4>
+            <p>Should you require information or help for this product, <br/>
+            please contact us by email or by phone and we will be happy to assist you.</p>
         </div>
     </div>
   </div>
