--- a/snippets/product-page-get-info.liquid
+++ b/snippets/product-page-get-info.liquid
@@ -713,9 +713,9 @@
                         {%- unless product.has_only_default_variant -%}
                             <div class="product-page-info__options mb-15">
                                 {%- unless is_quick_view -%}
-                                {%- assign quantity_connect = 'footbar' -%}
+                                    {%- assign trigger_id = 'footbar' -%}
                                 {%- endunless -%}
-                                {% render 'product-get-quantity' with quantity_show_title: true %}
+                                {% include 'product-get-options' with options_type: 2 options_show_title: false change_history: change_history %}
                             </div>
                         {%- endunless -%}
                     {%- endif -%}
@@ -725,56 +725,54 @@
                         </div>
                     {%- endif -%}
                     {%- if show_quantity -%}
+                        <div class="product-page-info__field product-page-info__quantity mb-20">
                             {%- unless is_quick_view -%}
-                                {%- assign trigger_id = 'footbar' -%}
+                            {%- assign quantity_connect = 'footbar' -%}
                             {%- endunless -%}
                             {% render 'product-get-quantity' with quantity_show_title: true %}
                         </div>
-                    {%- endunless -%}
-                {%- endif -%}
-                {%- if show_notes -%}
-                <div class="product-page-info__field product-page-info__notes mb-20">
-                    <label>{{ 'products.product.notes_label' | t }}</label>
-                    <textarea name="" placeholder="{{ 'products.product.notes_placeholder' | t }}" class="mb-0"></textarea>
-                </div>
-            {%- endif -%}
-            {% include 'product-page-get-buttons' %}
-            {{ free_shipping_html }}
-            {{ payments_html }}
-            {%- if show_addthis -%}
-                {% capture addthis_html %}{% render 'addthis' %}{% endcapture %}
-                {%- if addthis_html.size > 0 -%}
-                    <div class="product-page-info__share mb-20">
-                        <label>{{ 'products.product.share' | t }}</label>
-                        {{ addthis_html }}
-                    </div>
-                    {%- endif -%}
-                    {%- endif -%}
-                    {%- if show_social_share_buttons -%}
-                        <div class="product-page-info__share product-page-info__field mt-20 mb-10">
-                            <label class="mb-6">{{ 'products.product.share' | t }}</label>
-                            {% render 'social-share' share_type: social_share_buttons_type share_title: title share_permalink: url share_image: product.featured_media %}
+                        {%- endif -%}
+                        {%- if show_notes -%}
+                            <div class="product-page-info__field product-page-info__notes mb-20">
+                                <label>{{ 'products.product.notes_label' | t }}</label>
+                                <textarea name="" placeholder="{{ 'products.product.notes_placeholder' | t }}" class="mb-0"></textarea>
+                            </div>
+                        {%- endif -%}
+                        {% include 'product-page-get-buttons' %}
+                        {{ free_shipping_html }}
+                        {{ payments_html }}
+                        {%- if show_addthis -%}
+                            {% capture addthis_html %}{% render 'addthis' %}{% endcapture %}
+                            {%- if addthis_html.size > 0 -%}
+                                <div class="product-page-info__share mb-20">
+                                    <label>{{ 'products.product.share' | t }}</label>
+                                    {{ addthis_html }}
                                 </div>
                             {%- endif -%}
-                            {%- if full_details -%}
+                        {%- endif -%}
+                        {%- if show_social_share_buttons -%}
+                            <div class="product-page-info__share product-page-info__field mt-20 mb-10">
+                                <label class="mb-6">{{ 'products.product.share' | t }}</label>
+                                {% render 'social-share' share_type: social_share_buttons_type share_title: title share_permalink: url share_image: product.featured_media %}
+                            </div>
+                        {%- endif -%}
+                        {%- if full_details -%}
                             <div class="product-page-info__full-details d-flex justify-content-center justify-content-lg-start mt-15">
                                 <a href="{{ url }}" class="btn-link h6">{{ 'products.product.button_full_details' | t }}</a>
-                                </div>
-                            {%- endif -%}
-                            {% endform %}
-                    {%- endif -%}
-                    {% comment %} Blancsom Theme - Repositioned 'Size Guide' & 'Delivery & Return' Button 
-                    {%- if show_size_guide or show_delivery_return -%}
-                        <div class="product-page-info__details-buttons mb-30 mb-lg-15 d-flex flex-wrap justify-content-center justify-content-lg-start">
-                            {%- if show_size_guide and product.metafields.sizeguide.html != 'hide' -%}
-                                <div class="btn-link h6 mb-10 px-15 px-lg-10 js-popup-button" data-js-popup-button="size-guide">{{ 'products.product.size_guide' | t }}</div>
-                            {%- endif -%}
-                            {%- if show_delivery_return -%}
-                                <div class="btn-link h6 mb-10 px-15 px-lg-10 js-popup-button" data-js-popup-button="delivery-return">{{ 'products.product.delivery_return' | t }}</div>
-                            {%- endif -%}
-                        </div>
-                    </div>
+                            </div>
+                        {%- endif -%}
+                    {% endform %}
                 {%- endif -%}
+                {% comment %} Blancsom Theme - Repositioned 'Size Guide' & 'Delivery & Return' Button 
+                {%- if show_size_guide or show_delivery_return -%}
+                    <div class="product-page-info__details-buttons mb-30 mb-lg-15 d-flex flex-wrap justify-content-center justify-content-lg-start">
+                        {%- if show_size_guide and product.metafields.sizeguide.html != 'hide' -%}
+                            <div class="btn-link h6 mb-10 px-15 px-lg-10 js-popup-button" data-js-popup-button="size-guide">{{ 'products.product.size_guide' | t }}</div>
+                        {%- endif -%}
+                        {%- if show_delivery_return -%}
+                            <div class="btn-link h6 mb-10 px-15 px-lg-10 js-popup-button" data-js-popup-button="delivery-return">{{ 'products.product.delivery_return' | t }}</div>
+                        {%- endif -%}
+                    </div>
                 {%- endif -%} {% endcomment %}
                 {% include 'blancsom-sourcing-check' %}
             </div>
